--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -14,21 +13,17 @@ body {
 
 }
 
+* {
+    padding: 0;
+    margin: 0;
+}
+
 *,
 *:before,
 *:after {
     box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin: 0;
-}
 
 .container {
     margin: 0 auto;
@@ -190,13 +185,11 @@ p {
 }
 
 .collage__content {
-    margin: 0 auto;
     padding: 50px 0;
-    width: 75%;
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 5vw);
-    grid-gap: 15px;
+    grid-gap: 10px;
+    justify-content: center;
+    grid: repeat(8, 90px) / repeat(8, 90px);
 }
 
 .collage__pic {
@@ -223,59 +216,35 @@ p {
 }
 
 .collage__item-1 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 5;
+    grid-area: 1 / 1 / span 4/ span 2;
 }
 
 .collage__item-2 {
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-area: 1 / 3 / span 2/ span 2;
 }
 
 .collage__item-3 {
-    grid-column-start: 5;
-    grid-column-end: 9;
-    grid-row-start: 1;
-    grid-row-end: 6;
+    grid-area: 1 / 5 / span 5/ span 4;
 }
 
 .collage__item-4 {
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start: 3;
-    grid-row-end: 5;
+    grid-area: 3 / 3 / span 2/ span 2;
 }
 
 .collage__item-5 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 5;
-    grid-row-end: 7;
+    grid-area: 5 / 1 / span 2/ span 2;
 }
 
 .collage__item-6 {
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row-start: 5;
-    grid-row-end: 7;
+    grid-area: 5 / 3 / span 2/ span 2;
 }
 
 .collage__item-7 {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 7;
-    grid-row-end: 9;
+    grid-area: 7 / 1 / span 2/ span 4;
 }
 
 .collage__item-8 {
-    grid-column-start: 5;
-    grid-column-end: 9;
-    grid-row-start: 6;
-    grid-row-end: 9;
+    grid-area: 6 / 5 / span 3/ span 4;
 }
 
 /* Footer */
